correct footer width, correct z-index level of coloured boxes

--- a/part-1/css/styles.css
+++ b/part-1/css/styles.css
@@ -32,8 +32,7 @@ body {
   background-color: pink;
   position: absolute;
   top: 50px;
-  left: 100px;
-
+  right: 100px;
 }
 
 .green {
@@ -41,6 +40,7 @@ body {
   position: absolute;
   bottom: 50px;
   left: 50%;
+  z-index: 0;
 }
 
 .blue {
@@ -48,6 +48,7 @@ body {
   position: relative;
   top: 50px;
   left: 100px;
+  z-index: 2;
 }
 
 .orange {
@@ -62,5 +63,5 @@ body {
   position: fixed;
   width: 100%;
   bottom: 0%;
-  float: left;
+  left: 0%;
 }
